--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,24 @@
     "start": "webpack-dev-server --open --mode development",
     "build": "webpack --mode production"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/nubaid/nvd.git"
+  },
   "author": "nubaid",
   "license": "ISC",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@babel/preset-react": "^7.7.4",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link": "^1.2.13",
+    "apollo-link-context": "^1.0.19",
+    "apollo-link-error": "^1.1.12",
+    "apollo-link-http": "^1.5.16",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.1.1",
+    "graphql-tag": "^2.10.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2"
