--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/nubaid/nvd.git"
+    "url": "git+ssh://git@github.com/nubaid/demo-test.git"
   },
   "author": "nubaid",
   "license": "ISC",
