--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
     "graphql-tag": "^2.10.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router": "^5.1.2"
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
