--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dataloader": "^2.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
     "graphql-tools": "^4.0.6",
+    "graphql-type-json": "^0.3.1",
+    "lodash": "^4.17.15",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
