--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "apollo-link-context": "^1.0.19",
     "apollo-link-error": "^1.1.12",
     "apollo-link-http": "^1.5.16",
+    "apollo-upload-client": "^14.1.2",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.1.1",
     "graphql-tag": "^2.10.1",
