--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "graphql": "^14.5.8",
     "graphql-tools": "^4.0.6",
     "graphql-type-json": "^0.3.1",
+    "graphql-upload": "^11.0.0",
     "lodash": "^4.17.15",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
@@ -27,6 +28,8 @@
     "sequelize": "^5.21.3",
     "sequelize-cli": "^5.5.1",
     "sqlite3": "^4.1.1",
+    "swagger-jsdoc": "^5.0.0",
+    "swagger-ui-express": "^4.1.4",
     "walk": "^2.3.14",
     "walk-sync": "^2.0.2"
   }
